envoy/envoy.yaml
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 15000

static_resources:
  listeners:
    - name: 0.0.0.0_8081
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8081
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                access_log:
                  - name: envoy.access_loggers.file
                    typed_config:
                      "@type": "type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog"
                      path: /dev/stdout
                      format: "[%START_TIME%] %DOWNSTREAM_REMOTE_ADDRESS% \"%REQ(:METHOD)% %UPSTREAM_HOST% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%\" - %RESPONSE_CODE% - %RESPONSE_FLAGS% \n"
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                route_config:
                  name: server.8080
                  virtual_hosts:
                    - name: server
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/hello"
                          route:
                            cluster: server-8080
                stat_prefix: server-8080
  clusters:
    - name: server-8080
      connect_timeout: 15s
      health_checks:
        - timeout: 1s
          interval: 20s
          unhealthy_threshold: 3
          healthy_threshold: 3
          tcp_health_check: { }
      http_protocol_options:
        allow_chunked_length: true
      type: STRICT_DNS
      typed_extension_protocol_options:
        envoy.extensions.upstreams.tcp.v3.TcpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.tcp.v3.TcpProtocolOptions
          idle_timeout: 3600s
      load_assignment:
        cluster_name: localhost
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: localhost
                      port_value: 8080
